# aubo_robot_base

./: CMakeLists.txt  README.md  package.xml
config/: tags.yaml
include/aubo_robot_base/: AuboRobotMetaType.h  robot_control_base.h
launch/: apriltag_fetch.launch  ar_tracker_fetch.launch  aruco_fetch.launch  call_rscamera_apriltag.launch  call_rscamera_artrack.launch  call_rscamera_aruco.launch  demo11_test.launch
src/: apriltag_fetch.cpp  ar_tracker_fetch.cpp  aruco_fetch.cpp  demo11.cpp  image_draw.cpp  robot_control_base.cpp
srv/: fetch_box_num.srv
